crates/keron-lang/tests/corpus/errors/check/struct_unknown_field.keron
struct Point { x: Int, y: Int }

val p: Point = Point { x: 0, y: 0 }

val z: Int = p.z
